Bug 53870 - : Sort lists in Calc not shown and adding a second custom defined list, deletes a privious defined custom list
Summary: : Sort lists in Calc not shown and adding a second custom defined list, delet...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: Other All
: high normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:3.7.0 target:3.6.3
Keywords: regression
: 56039 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-21 07:53 UTC by Jens S
Modified: 2012-10-27 04:44 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jens S 2012-08-21 07:53:41 UTC
Problem description: 
Under Tools - Options - LibreOffice Calc - Sort List nothing is listed. Not your standard week and month names or your own created list. BUT all works OK in the program. 

When you then create a new list and click OK, all your earlier made personal lists are deleted (but not the standard ones)



              
Browser: Mozilla/5.0 (Windows NT 6.0; rv:14.0) Gecko/20100101 Firefox/14.0.1
LibreOffice calc Danish version 3.6 and 3.6.1
Comment 1 pierre-yves samyn 2012-09-21 14:31:07 UTC
Hello

I reproduce with Version 3.6.2.1 (Build ID: ba822cc) & Windows 7 64bits

Regards
Pierre-Yves
Comment 2 Cor Nouws 2012-09-25 09:47:21 UTC
was OK in version 3.5.x
Comment 3 Cor Nouws 2012-09-25 09:48:53 UTC
additional finding:

add some data in cells
select
Tools > Options ... > Sort lists
click Copy

list is added and the predefined lists are now shown
not my own defined sort lists
Comment 4 Cor Nouws 2012-09-25 10:41:35 UTC
additional finding II:

when I add some extra Sort list
my own previously defined sort lists are removed
Comment 5 zhuang.gou 2012-10-08 09:36:18 UTC
Same behavior with 3.6.2.2 (Build ID: da8c1e6) on Mac OS X
Comment 6 Roman Eisele 2012-10-17 10:54:30 UTC
@ Calc experts:

Hi Eike, Kohei, and Markus,

have you already noticed this little, but nasty 3.6 regression?
It makes the handling of (custom) sort lists a pain ...
so please take a look at this issue.

Thank you very much!


(I can still reproduce this with LibO 3.6.3.1 (RC) on Mac OS X 10.6.8.)
Comment 7 Not Assigned 2012-10-17 13:56:33 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4302eb0a6c4e28ab675de9d59e73cac345ba30c7

write the custom sort list info into the item set, fdo#53870



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Markus Mohrhard 2012-10-17 14:04:59 UTC
*** Bug 56039 has been marked as a duplicate of this bug. ***
Comment 9 Roman Eisele 2012-10-17 14:29:55 UTC
@ Markus Mohard:

Thank you very much for taking this issue!
Comment 10 Not Assigned 2012-10-19 09:11:33 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=07cc274256ebff259e228e7285bc27e6ddc94fdc&g=libreoffice-3-6

write the custom sort list info into the item set, fdo#53870


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Not Assigned 2012-10-22 13:39:18 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d8643c11d4c89f0534b3caebd4e0fbf212777140&g=libreoffice-3-6-3

write the custom sort list info into the item set, fdo#53870


It will be available already in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Roman Eisele 2012-10-23 08:39:21 UTC
VERIFIED as FIXED:

While I can still reproduce this issue on Mac OS X 10.6.8 (Intel) with
  LOdev 3.7.0.0.alpha0+ (build ID: c252694; pull time: 2012-10-12 22:05:41),
I can no longer reproduce it with
  LOdev 3.7.0.0.alpha0+ (Build ID: 370m0(Build:0); pull time: 2012-10-21
  10:01:47);
some quick tests show that the custom sort lists handling works fine again.

Thank you very much for fixing this issue!
Comment 13 pierre-yves samyn 2012-10-27 04:44:28 UTC
VERIFIED as FIXED with Version 3.6.4.0+ (Build ID: b1f308d) and Windows 7 64bits

Thank you 
Regards
Pierre-Yves