write the custom sort list info into the item set, fdo#53870

Change-Id: I9c7f62b47f83b7798a8efdbf3896503918929f03